Fix Docker CI test: Use entrypoint for --help command
- Change from 'python start.py --help' to just '--help'
- This ensures the Docker entrypoint script processes the --help flag
- The entrypoint script now properly handles --help without requiring credentials
- Fixes CI Docker test that was bypassing the entrypoint logic

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,5 +105,5 @@ jobs:
     
     - name: Test Docker image
       run: |
-        # Test that the Docker image can run help command
-        docker run --rm booking-defragmenter:test python start.py --help
+        # Test that the Docker image can run help command through entrypoint
+        docker run --rm booking-defragmenter:test --help
