Add custom sender display name support for emails
- Add SENDER_DISPLAY_NAME environment variable for customizable email sender display
- Emails now show 'DHP Systems <admin@quickswitch.com.au>' instead of just the email
- Maintains working SMTP authentication with existing app password
- Update documentation and examples to reflect new configuration option
- Default display name set to 'DHP Systems' in install script

This allows users to customize how the sender appears in emails while keeping
the working authentication credentials intact.

--- a/env.example
+++ b/env.example
@@ -41,6 +41,9 @@ USE_TRAINING_DB=false
 SMTP_SERVER=smtp.gmail.com
 SMTP_PORT=587
 SENDER_EMAIL=your_email@yourdomain.com
+SENDER_DISPLAY_NAME=Your Display Name
+# Note: SENDER_DISPLAY_NAME is optional - emails will show "Your Display Name <your_email@yourdomain.com>"
+# Keep SENDER_EMAIL as the actual Gmail account that generated the APP_PASSWORD
 APP_PASSWORD=your_gmail_app_password_here
 TEST_RECIPIENT=your_test_email@yourdomain.com
 
