Add missing OUTPUT_DIR configuration to env.example
- Add OUTPUT_DIR configuration section to environment configuration template
- Set default output directory to /opt/bookingchart-defragmenter/output
- Maintains consistency with install.sh script configuration
- Documents where Excel reports and analysis files are saved

--- a/env.example
+++ b/env.example
@@ -58,3 +58,9 @@ TEST_RECIPIENT=your_test_email@yourdomain.com
 # Set logging verbosity level
 LOG_LEVEL=INFO
 # LOG_LEVEL=DEBUG  # For more detailed logging (useful for troubleshooting)
+
+# ============================================================================
+# OUTPUT CONFIGURATION
+# ============================================================================
+# Directory where Excel reports and analysis files are saved
+OUTPUT_DIR=/opt/bookingchart-defragmenter/output
