Add totals to consolidated Excel and consolidated report email functionality
- Add row totals (right column) showing total moves for each property
- Add column totals (bottom row) showing total moves for each date
- Add grand total (bottom right) showing total moves across all properties and dates
- Add SEND_CONSOLIDATED_EMAIL environment variable for consolidated report emails
- Implement send_consolidated_report_email method in EmailSender class
- Send consolidated Excel file to operations@discoveryparks.com.au when enabled
- Update all documentation (README, DEVELOPER_README, DOCKER_INSTALLATION)
- Professional HTML email template for consolidated reports
- Maintain existing functionality while adding new features

This enables operations teams to receive comprehensive multi-property
analysis reports with totals for better strategic decision-making.

--- a/env.example
+++ b/env.example
@@ -27,6 +27,10 @@ TARGET_PROPERTIES=ALL
 ENABLE_EMAILS=false
 # ENABLE_EMAILS=true  # Set to true to enable email notifications
 
+# Enable/disable consolidated report email to operations team
+SEND_CONSOLIDATED_EMAIL=false
+# SEND_CONSOLIDATED_EMAIL=true  # Set to true to send consolidated report to operations@discoveryparks.com.au
+
 # ============================================================================
 # DATABASE CONFIGURATION
 # ============================================================================
