Make consolidated report email recipient configurable
- Add CONSOLIDATED_EMAIL_RECIPIENT environment variable
- Default to operations@discoveryparks.com.au if not specified
- Allow any email address to be configured for consolidated reports
- Update all documentation (README, DOCKER_INSTALLATION, env.example, install.sh)
- Console output now shows the recipient email address
- Maintain backward compatibility with existing configurations

This provides flexibility to send consolidated reports to any
email address while keeping the default operations team address.

--- a/env.example
+++ b/env.example
@@ -29,7 +29,11 @@ ENABLE_EMAILS=false
 
 # Enable/disable consolidated report email to operations team
 SEND_CONSOLIDATED_EMAIL=false
-# SEND_CONSOLIDATED_EMAIL=true  # Set to true to send consolidated report to operations@discoveryparks.com.au
+# SEND_CONSOLIDATED_EMAIL=true  # Set to true to send consolidated report
+
+# Email address for consolidated report (when SEND_CONSOLIDATED_EMAIL=true)
+CONSOLIDATED_EMAIL_RECIPIENT=operations@discoveryparks.com.au
+# CONSOLIDATED_EMAIL_RECIPIENT=your_email@yourdomain.com  # Change to any email address
 
 # ============================================================================
 # DATABASE CONFIGURATION
