--- a/web_app/docker-compose.yml
+++ b/web_app/docker-compose.yml
@@ -17,6 +17,12 @@ services:
       - WEB_APP_HOST=0.0.0.0
       - SECRET_KEY=your-secret-key-here
       - JWT_SECRET_KEY=your-jwt-secret-key-here
+      - AGENT_ID=***REMOVED***
+      - AGENT_PASSWORD=***REMOVED***
+      - CLIENT_ID=***REMOVED***
+      - CLIENT_PASSWORD=***REMOVED***
+      - USE_TRAINING_DB=true
+      - PROPERTY_REFRESH_INTERVAL_HOURS=1
     volumes:
       - ./logs:/app/logs
     networks:
