Clean up unified naming and complete migration to single solution

--- a/env.example
+++ b/env.example
@@ -1,28 +1,56 @@
-# BookingChartDefragmenter Environment Configuration
-# Copy this file to .env and update with your actual values
+# ==============================================================================
+# RMS Booking Chart Defragmenter - Unified Configuration
+# ==============================================================================
+# This configuration supports both the original CLI application and web interface
+# Copy this file to .env and update with your actual credentials
 # 
 # SECURITY NOTE: Never commit the .env file to version control!
-# The .env file should contain your actual credentials and is ignored by git.
 
-# ============================================================================
-# RMS API CREDENTIALS (REQUIRED)
-# ============================================================================
-# These are mandatory for connecting to the RMS (Reservation Management System)
+# ==============================================================================
+# RMS API CREDENTIALS (REQUIRED for both applications)
+# ==============================================================================
+# These credentials are used by both the original analyzer and web app
 AGENT_ID=your_agent_id_here
 AGENT_PASSWORD=your_agent_password_here
 CLIENT_ID=your_client_id_here
 CLIENT_PASSWORD=your_client_password_here
 
-# ============================================================================
-# ANALYSIS CONFIGURATION
-# ============================================================================
-# Specify which properties to analyze
+# ==============================================================================
+# DATABASE CONFIGURATION (Web App)
+# ==============================================================================
+# PostgreSQL configuration for the web interface
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=defrag_db
+DB_USER=defrag_user
+DB_PASSWORD=DefragDB2024!
+
+# ==============================================================================
+# WEB APPLICATION CONFIGURATION
+# ==============================================================================
+# Web server settings
+WEB_APP_PORT=8000
+WEB_APP_HOST=0.0.0.0
+SECRET_KEY=your-secret-key-here-change-this-in-production
+JWT_SECRET_KEY=your-jwt-secret-key-here-change-this-in-production
+
+# Property data refresh interval (hours)
+PROPERTY_REFRESH_INTERVAL_HOURS=1
+
+# ==============================================================================
+# ORIGINAL APPLICATION CONFIGURATION
+# ==============================================================================
+# Analysis settings for the original CLI application
 TARGET_PROPERTIES=ALL
 # TARGET_PROPERTIES=SADE,QROC,TCRA  # Example: specific properties (comma-separated)
 
-# ============================================================================
-# EMAIL CONFIGURATION
-# ============================================================================
+# Database mode selection
+USE_TRAINING_DB=false
+# USE_TRAINING_DB=true  # Set to true to use training database for testing
+
+# ==============================================================================
+# EMAIL CONFIGURATION (Original App)
+# ==============================================================================
 # Enable/disable email notifications with Excel attachments
 ENABLE_EMAILS=false
 # ENABLE_EMAILS=true  # Set to true to enable email notifications
@@ -33,25 +61,15 @@ SEND_CONSOLIDATED_EMAIL=false
 
 # Email address for consolidated report (when SEND_CONSOLIDATED_EMAIL=true)
 CONSOLIDATED_EMAIL_RECIPIENT=operations@discoveryparks.com.au
-# CONSOLIDATED_EMAIL_RECIPIENT=your_email@yourdomain.com  # Change to any email address
 
-# ============================================================================
-# DATABASE CONFIGURATION
-# ============================================================================
-# Choose between live production data or training database
-USE_TRAINING_DB=false
-# USE_TRAINING_DB=true  # Set to true to use training database for testing
-
-# ============================================================================
+# ==============================================================================
 # SMTP CONFIGURATION (Required only if ENABLE_EMAILS=true)
-# ============================================================================
+# ==============================================================================
 # Gmail SMTP settings for sending notification emails
 SMTP_SERVER=smtp.gmail.com
 SMTP_PORT=587
 SENDER_EMAIL=your_email@yourdomain.com
-SENDER_DISPLAY_NAME=Your Display Name
-# Note: SENDER_DISPLAY_NAME is optional - emails will show "Your Display Name <your_email@yourdomain.com>"
-# Keep SENDER_EMAIL as the actual Gmail account that generated the APP_PASSWORD
+SENDER_DISPLAY_NAME=DHP Defragmentation System
 APP_PASSWORD=your_gmail_app_password_here
 TEST_RECIPIENT=your_test_email@yourdomain.com
 
@@ -60,15 +78,54 @@ TEST_RECIPIENT=your_test_email@yourdomain.com
 # 2. Generate an "App Password" (not your regular password)
 # 3. Use the App Password in the APP_PASSWORD field above
 
-# ============================================================================
+# ==============================================================================
+# SCHEDULING CONFIGURATION
+# ==============================================================================
+# Cron schedule for automated analysis (format: minute hour day month weekday)
+CRON_SCHEDULE=0 2 * * *  # Daily at 2:00 AM (default)
+# CRON_SCHEDULE=0 */6 * * *  # Every 6 hours
+# CRON_SCHEDULE=0 2 * * 1-5  # Weekdays only at 2:00 AM
+
+# Enable/disable cron scheduling
+ENABLE_CRON=true
+
+# ==============================================================================
 # LOGGING CONFIGURATION
-# ============================================================================
+# ==============================================================================
 # Set logging verbosity level
 LOG_LEVEL=INFO
 # LOG_LEVEL=DEBUG  # For more detailed logging (useful for troubleshooting)
 
-# ============================================================================
+# Log directory (within container)
+LOG_DIR=/app/logs
+
+# ==============================================================================
 # OUTPUT CONFIGURATION
-# ============================================================================
+# ==============================================================================
 # Directory where Excel reports and analysis files are saved
-OUTPUT_DIR=/opt/bookingchart-defragmenter/output
+OUTPUT_DIR=/app/output
+
+# ==============================================================================
+# CONTAINER CONFIGURATION
+# ==============================================================================
+# Container timezone
+TZ=Australia/Sydney
+
+# Container user configuration
+CONTAINER_USER=appuser
+CONTAINER_GROUP=appuser
+
+# ==============================================================================
+# HEALTH CHECK CONFIGURATION
+# ==============================================================================
+# Health check endpoints and intervals
+HEALTH_CHECK_INTERVAL=30s
+HEALTH_CHECK_TIMEOUT=10s
+HEALTH_CHECK_RETRIES=3
+
+# ==============================================================================
+# BACKUP CONFIGURATION
+# ==============================================================================
+# Backup settings for data persistence
+BACKUP_RETENTION_DAYS=30
+BACKUP_ENABLED=true
