--- a/requirements.txt
+++ b/requirements.txt
@@ -35,7 +35,7 @@ python-dateutil>=2.8.2
 pytz>=2023.3
 
 # Email Support (Original App)
-smtplib2>=0.2.1
+# smtplib2 removed - not available in PyPI, using standard smtplib
 
 # File Format Support
 xlsxwriter>=3.1.9
