--- a/requirements.txt
+++ b/requirements.txt
@@ -11,9 +11,8 @@ python-dateutil>=2.8.2
 pytz>=2023.3
 
 # Web Framework
-fastapi==0.104.1
-starlette>=0.40.0
-uvicorn[standard]==0.24.0
+fastapi>=0.115.0
+uvicorn[standard]>=0.30.0
 jinja2>=3.1.6
 python-multipart>=0.0.18
 aiofiles>=23.2.0
