SECURITY: Remove hardcoded SMTP credentials and email addresses
🔒 ADDITIONAL SECURITY CLEANUP:
- Remove hardcoded Gmail app password 'ydos qtem rqfu zdzl' from setup.py
- Replace 'admin@quickswitch.com.au' with placeholder in all files
- Replace 'tim@quickswitch.com.au' with placeholder in email_sender.py
- Update backup files with safe placeholders

✅ All hardcoded credentials and personal email addresses now removed

--- a/backup/original-20250821_163147/docker-compose.yml
+++ b/backup/original-20250821_163147/docker-compose.yml
@@ -25,9 +25,9 @@ services:
       # Email Configuration (if enabled)
       - SMTP_SERVER=${SMTP_SERVER:-smtp.gmail.com}
       - SMTP_PORT=${SMTP_PORT:-587}
-      - SENDER_EMAIL=${SENDER_EMAIL:-***REMOVED***}
+      - SENDER_EMAIL=${SENDER_EMAIL:-YOUR_EMAIL@YOURDOMAIN.COM}
       - APP_PASSWORD=${APP_PASSWORD}
-      - TEST_RECIPIENT=${TEST_RECIPIENT:-***REMOVED***}
+      - TEST_RECIPIENT=${TEST_RECIPIENT:-YOUR_TEST_EMAIL@YOURDOMAIN.COM}
       
       # Logging Configuration
       - LOG_LEVEL=${LOG_LEVEL:-INFO}
