feat: implement Git-based automatic versioning system
- Add dynamic version detection using Git tags and commits
- Create /api/v1/version endpoint for real-time version info
- Update footer to display dynamic Git-based version instead of hardcoded v1.0.0
- Add pre-commit hook to auto-update README version badge
- Implement VERSION_INFO file system for containerized deployments
- Fix CSS alignment issues in header elements
- Remove unused web_app/Dockerfile (production uses unified root Dockerfile)
- Add comprehensive version management documentation

Version format examples:
- Release: v2.0.0
- Development: v2.0.0-5-abc1234
- With changes: v2.0.0-abc1234-dirty

The system automatically updates version display across UI, API, and documentation.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 *.env
 !env.example
 
+# Generated version file (created during deployment)
+web_app/VERSION_INFO
+
 # Python cache and compiled files
 __pycache__/
 *.py[cod]
