fix: update Docker Hub repository to use enaran username
- Change all references from dhpsystems/rms-defragmenter to enaran/rms-defragmenter
- Update CI/CD workflows to push to correct Docker Hub repository
- Update docker-compose.yml, install.sh, build-pipeline.sh
- Update documentation to reflect new repository location

This enables the CI/CD pipeline to work with the enaran Docker Hub account.

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -15,7 +15,7 @@ on:
 
 env:
   REGISTRY: docker.io
-  IMAGE_NAME: dhpsystems/rms-defragmenter
+  IMAGE_NAME: enaran/rms-defragmenter
 
 jobs:
   build-and-push:
