--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,7 +69,7 @@ jobs:
       continue-on-error: true
       
     - name: Upload security reports
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       if: always()
       with:
         name: security-reports
@@ -205,12 +205,27 @@ jobs:
       run: |
         docker build -t rms-defragmenter:test .
         
-        # Test that the image runs without immediate crash
-        timeout 30s docker run --rm rms-defragmenter:test python --version || true
+        # Test basic container functionality
+        docker run --rm rms-defragmenter:test python --version
         
         # Test that required files exist in the image
         docker run --rm rms-defragmenter:test ls -la /app/
         docker run --rm rms-defragmenter:test python -c "import sys; print(f'Python version: {sys.version}')"
+        
+        # Test container with minimal environment (should not crash immediately)
+        docker run --rm \
+          -e AGENT_ID=test \
+          -e AGENT_PASSWORD=test \
+          -e CLIENT_ID=test \
+          -e CLIENT_PASSWORD=test \
+          -e DB_HOST=localhost \
+          -e DB_PORT=5432 \
+          -e DB_NAME=test_db \
+          -e DB_USER=test_user \
+          -e DB_PASSWORD=test_pass \
+          --entrypoint="" \
+          rms-defragmenter:test \
+          python -c "print('✅ Container environment test passed')"
 
   markdown-docs:
     name: Documentation Quality
