refactor: update terminology from 'original' to 'CLI' application
Replace references to 'original application' with 'CLI application' to:
- Avoid confusion about old vs new versions
- Clarify that it's just a different interface (CLI vs Web)
- Maintain consistent terminology throughout codebase

Changes:
- Updated env.example template
- Updated VPS .env file comments
- Updated setup.py .env generation
- Updated config.py comments
- Consistent 'CLI application' and 'CLI analyzer' terminology

This makes it clear we have two interfaces to the same system,
not an old and new application.

--- a/env.example
+++ b/env.example
@@ -1,7 +1,7 @@
 # ==============================================================================
 # RMS Booking Chart Defragmenter - Unified Configuration
 # ==============================================================================
-# This configuration supports both the original CLI application and web interface
+# This configuration supports both the CLI application and web interface
 # Copy this file to .env and update with your actual credentials
 # 
 # SECURITY NOTE: Never commit the .env file to version control!
@@ -9,7 +9,7 @@
 # ==============================================================================
 # RMS API CREDENTIALS (REQUIRED for both applications)
 # ==============================================================================
-# These credentials are used by both the original analyzer and web app
+# These credentials are used by both the CLI analyzer and web app
 AGENT_ID=your_agent_id_here
 AGENT_PASSWORD=your_agent_password_here
 CLIENT_ID=your_client_id_here
@@ -38,9 +38,9 @@ JWT_SECRET_KEY=your-jwt-secret-key-here-change-this-in-production
 PROPERTY_REFRESH_INTERVAL_HOURS=1
 
 # ==============================================================================
-# ORIGINAL APPLICATION CONFIGURATION
+# CLI APPLICATION CONFIGURATION
 # ==============================================================================
-# Analysis settings for the original CLI application
+# Analysis settings for the CLI application
 TARGET_PROPERTIES=ALL
 # TARGET_PROPERTIES=SADE,QROC,TCRA  # Example: specific properties (comma-separated)
 
@@ -49,7 +49,7 @@ USE_TRAINING_DB=false
 # USE_TRAINING_DB=true  # Set to true to use training database for testing
 
 # ==============================================================================
-# EMAIL CONFIGURATION (Original App)
+# EMAIL CONFIGURATION (CLI App)
 # ==============================================================================
 # Enable/disable email notifications with Excel attachments
 ENABLE_EMAILS=false
