Fix persistent CI issues: TruffleHog, Docker CLI mode, npm rate limits
- Simplify TruffleHog to use filesystem scan only (avoid diff comparison issues)
- Add CI=true and GITHUB_ACTIONS=true env vars to Docker test command
- Remove 'web' argument from Docker test (let default web mode trigger)
- Add retry logic with exponential backoff for npm install to handle rate limiting
- Ensure proper CI environment detection in entrypoint script

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -220,12 +220,14 @@ jobs:
         
         # Test that web app can start without RMS credentials (normal mode)
         timeout 10s docker run --rm \
+          -e CI=true \
+          -e GITHUB_ACTIONS=true \
           -e DB_HOST=localhost \
           -e DB_PORT=5432 \
           -e DB_NAME=test_db \
           -e DB_USER=test_user \
           -e DB_PASSWORD=test_pass \
-          rms-defragmenter:test web || echo "✅ Container startup test completed (timeout expected)"
+          rms-defragmenter:test || echo "✅ Container startup test completed (timeout expected)"
 
   markdown-docs:
     name: Documentation Quality
@@ -241,7 +243,14 @@ jobs:
         node-version: '18'
         
     - name: Install markdownlint
-      run: npm install -g markdownlint-cli
+      run: |
+        # Retry npm install with exponential backoff for rate limiting
+        for i in {1..3}; do
+          npm install -g markdownlint-cli && break || {
+            echo "npm install failed, attempt $i/3"
+            sleep $((i * 5))
+          }
+        done
       
     - name: Lint Markdown files
       run: |
