--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -144,13 +144,21 @@ jobs:
     if: github.event_name != 'pull_request'
     
     steps:
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        registry: docker.io
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+    
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: '${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest'
+        image-ref: 'docker.io/enaran/rms-defragmenter:latest'
         format: 'sarif'
         output: 'trivy-results.sarif'
         severity: 'CRITICAL,HIGH'
+      continue-on-error: true
         
     - name: Upload Trivy scan results to GitHub Security tab
       uses: github/codeql-action/upload-sarif@v3
@@ -187,7 +195,7 @@ jobs:
         EOF
         
         # Run structure tests
-        container-structure-test test --image ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest --config container-test.yaml
+        container-structure-test test --image docker.io/enaran/rms-defragmenter:latest --config container-test.yaml
         
   notify-success:
     name: Notify Build Success
