--- a/env.example
+++ b/env.example
@@ -34,6 +34,10 @@ WEB_APP_HOST=0.0.0.0
 SECRET_KEY=your-secret-key-here-change-this-in-production
 JWT_SECRET_KEY=your-jwt-secret-key-here-change-this-in-production
 
+# Admin account configuration (set during installation)
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=your-secure-admin-password-here
+
 # Property data refresh interval (hours)
 PROPERTY_REFRESH_INTERVAL_HOURS=1
 
